# serde-prefix

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  readme.md
src/: lib.rs
tests/: test_prefix.rs
